# VpnControlPanel

./: .gitattributes  .gitignore  Makefile  README.md  broker.yaml.example  panel.yaml.example  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  001_initial_schema.py  002_vpn_configs.py  003_share_tokens.py  004_config_profile.py  005_share_secure_scope.py
broker_run/: __init__.py  config.py  main.py
configs/: README.md  config_client_in.json  config_grpc.json  config_reality.json  config_xhttp.json  hysteria.server.yaml
deploy/: env.example
deploy/scripts/: broker-status.sh  create-admin.sh  deploy.sh  fix-config-perms.sh  generate-secrets.sh  install-app.sh  install-deps.sh  install-nginx.sh  install-sudoers.sh  install-systemd.sh  install-vpn-systemctl.sh  lib.sh  migrate.sh  panel-services.sh  regenerate-all-configs.sh  render.sh  setup-config.sh  update.sh  (+3 more)
docs/: DEPLOY.md
panel/: __init__.py  config.py
tests/: __init__.py  conftest.py  conftest_configs.py  test_audit_hardening.py  test_auth.py  test_cli.py  test_client_uri.py  test_config.py  test_config_runtime.py  test_configs.py  test_create_config.py  test_crypto.py  test_health.py  test_observability.py  test_outbound_secrets.py  test_port_picker.py  test_profile_config.py  test_regenerate_all_configs.py  test_regenerate_config.py  test_service_ready.py  test_service_runtime.py  test_share_expiration.py  test_share_links.py  test_system_resources.py  test_systemd_reload.py  test_systemd_unit.py  test_vpn_connectivity.py  test_web.py  test_worker_identity.py  test_worker_initialize.py
(+102 files in other folders)
