[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-control-panel"
version = "0.2.0"
description = "VPN control panel for Xray and Hysteria2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "task-broker>=1.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "cryptography>=44.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[project.scripts]
vpn-broker = "broker_run.main:main"
vpn-api = "panel.api.main:main"
vpn-worker = "panel.worker.main:main"
vpn-create-admin = "panel.cli.create_admin:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["panel*", "broker_run*"]

[tool.setuptools.package-data]
"panel.web" = ["index.html", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
